# ooc-pong-raylib

./: .gitignore  CMakeLists.txt  README.md  main.c
ooc/: Object.c  Object.h  Object_struct.h
sources/: Entity2D.c  Entity2D.h  Entity2D_struct.h  main.c
sources/Entity2D/: Entity2D.c  Entity2D.h  Entity2D_struct.h
sources/Paddle/: Paddle.c  Paddle.h  Paddle_struct.h
